--- a/package.json
+++ b/package.json
@@ -19,10 +19,19 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "concurrently": "^8.2.2"
+    "concurrently": "^8.2.2",
+    "nodemon": "^3.1.10"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.922.0",
+    "aws-sdk": "^2.1692.0",
+    "cors": "^2.8.5",
+    "dotenv": "^17.2.3",
+    "express": "^5.1.0",
     "mongodb": "^6.20.0",
+    "mongoose": "^8.19.3",
+    "multer": "^2.0.2",
+    "multer-s3": "^3.0.1",
     "swiper": "^12.0.3"
   }
 }
