--- a/server/package.json
+++ b/server/package.json
@@ -16,9 +16,11 @@
     "@aws-sdk/client-s3": "^3.922.0",
     "aws-sdk": "^2.1692.0",
     "cors": "^2.8.5",
-    "dotenv": "^16.3.1",
-    "express": "^4.18.2",
-    "mongoose": "^8.0.3"
+    "dotenv": "^16.6.1",
+    "express": "^4.21.2",
+    "mongoose": "^8.19.3",
+    "multer": "^1.4.5-lts.1",
+    "multer-s3": "^3.0.1"
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
