--- a/package.json
+++ b/package.json
@@ -25,9 +25,11 @@
   "dependencies": {
     "@aws-sdk/client-s3": "^3.922.0",
     "aws-sdk": "^2.1692.0",
+    "bcrypt": "^6.0.0",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
+    "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.20.0",
     "mongoose": "^8.19.3",
     "multer": "^2.0.2",
