--- a/server/env.example
+++ b/server/env.example
@@ -1,14 +1,19 @@
 # Server Configuration
 PORT=5000
+NODE_ENV=development
+
+# Frontend URL (for CORS)
+# Local: http://localhost:5173
+# Production: https://your-frontend-app.vercel.app
+FRONTEND_URL=http://localhost:5173
 
 # MongoDB Configuration
+# Local: mongodb://localhost:27017/react-youtube
+# Production: mongodb+srv://username:password@cluster.mongodb.net/react-youtube
 MONGO_URI=mongodb://localhost:27017/react-youtube
 
-# JWT Secret (for future authentication)
-JWT_SECRET=your_jwt_secret_key_here
-
-# Node Environment
-NODE_ENV=development
+# JWT Secret (CHANGE THIS IN PRODUCTION!)
+JWT_SECRET=your_jwt_secret_key_here_change_in_production
 
 # AWS S3 Configuration
 AWS_ACCESS_KEY_ID=your_aws_access_key_id
