--- a/server/package.json
+++ b/server/package.json
@@ -29,7 +29,8 @@
     "mongoose": "^8.19.3",
     "morgan": "^1.10.1",
     "multer": "^1.4.5-lts.1",
-    "multer-s3": "^3.0.1"
+    "multer-s3": "^3.0.1",
+    "nodemailer": "^7.0.10"
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
