--- a/server/package.json
+++ b/server/package.json
@@ -31,7 +31,8 @@
     "morgan": "^1.10.1",
     "multer": "^1.4.5-lts.1",
     "multer-s3": "^3.0.1",
-    "nodemailer": "^7.0.10"
+    "nodemailer": "^7.0.10",
+    "resend": "^6.4.1"
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
